# dynlib

./: .gitignore  404.html  CHANGELOG.md  FIX_PLAN.md  ISSUES.md  Known_Issues.md  README.md  README.tr.md  TODO.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  tmp_memristor.toml
.github/workflows/: docs.yml
docs/: design.md  dsl_macros_and_functions.md  dsl_model_template.md  executor.md  export_sources.md  guardrails.md  implementation_plan.md  lag_system.md  mods.md  stepper_banks.md  stepper_protocol.md  stepper_workspace.md
docs/en/: index.md
docs/tr/: index.md
examples/: accuracy_demo.py  bifurcation_logistic_map.py  bifurcation_logistic_map_annotated.py  bifurcation_logistic_map_comparison.py  collatz.py  detect_transition.py  early_exit_demo.py  export_sources_demo.py  index.html  izhikevich.py  izhikevich_benchmark.py  jacobian_mode_benchmark.py  logistic_map.py  presets_demo.py  print_equations_demo.py  snapshot_demo.py  uri_demo.py  vanderpol.py
examples/analysis/: basin_duffing_known.py  basin_henon_auto.py  basin_henon_demo.py  basin_henon_known.py  basin_limit_cycle.py  basin_limit_cycle_auto.py  basin_limit_cycle_known.py  basin_refine_benchmark.py  demo_trajectory_analysis.py  heteroclinic_finder_tracer.py  homoclinic_finder_tracer.py  index.html  lyapunov_logistic_map_demo.py  lyapunov_lorenz_demo.py  lyapunov_sweep_demo.py  lyapunov_sweep_mle_demo.py  lyapunov_sweep_spectrum_demo.py  manifold_henon.py  manifold_ode_saddle.py  parameter_sweep.py  trajectory_analysis_demo.py
examples/bifurcation/: index.html
examples/integer-map/: index.html
examples/izhikevich/: index.html
getting-started/: index.html
guides/: index.html
manuals/: design.md  dynlib_guardrails.md  guardrails.md  implementation_plan.md
reference/: index.html
search/: search_index.json
tmp_export/: events_post.py  events_pre.py  rhs.py  stepper.py
tools/: gen_model_docs.py
tr/: index.html
validation/: adaptive_steppers_tol_sweep.py  ode_steppers_dt_sweep.py
(+482 files in other folders)
