[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dynlib"
version = "2.0.0"
description = "A dynamical systems simulation library."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "İsmail Öztürk", email = "ismail.ozturk@amasya.edu.tr" }]
license = { file = "LICENSE" }
keywords = ["ODE", "dynamical-systems", "simulation"]
dependencies = [
  "numpy>=1.23",
  "scipy>=1.9",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering :: Mathematics",
]

[project.optional-dependencies]
dev = ["pytest>=7", "numpy>=1.23", "scipy>=1.9"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"dynlib.models" = ["**/*.toml"]

