[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dynlib"
version = "0.35.8"
description = "A dynamical systems simulation library."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "İsmail Öztürk", email = "ismail.ozturk@amasya.edu.tr" }]
license = { file = "LICENSE" }
keywords = ["ODE", "dynamical-systems", "simulation"]
dependencies = [
  "numpy>=1.24",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering :: Mathematics",
]

[project.optional-dependencies]
jit  = ["numba>=0.57.1"]
plot = ["matplotlib>=3.7"]
dev = ["pytest>=7", "scipy>=1.9", "matplotlib>=3.7", "numba>=0.57.1"]

[project.scripts]
dynlib = "dynlib.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"dynlib.models" = ["**/*.toml"]
